@@ -1,4 +1,8 @@
-﻿drkns 24.07.2014 23:19:41 +0200 - build 4024
+﻿zg 25.07.2014 12:40:09 +0200 - build 4025
+
+1. уточнение 3981.
+
+drkns 24.07.2014 23:19:41 +0200 - build 4024
 
 1. При определении кодовой страницы юникод выбирается только в том случае, если текст явно не похож на ASCII.
    Должно уменьшиться количество ложных определений юникода (а количество ложных определений ASCII, соответственно, вырасти).
